# odoo-mcp-connector

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  __init__.py  __manifest__.py  docker-compose.yml  manifest.json  manifest.py  pyproject.toml
.agents/: AGENTS.md
docs/: CONFIGURATION.md  INSTALLATION.md  TROUBLESHOOTING.md
mcp_server_odoo/: __init__.py  __main__.py  channels.py  config.py  error_handling.py  error_sanitizer.py  formatters.py  lead_classifier.py  logging_config.py  odoo_connection.py  performance.py  resources.py  schemas.py  server.py  tools.py  webhooks.py
skills/: octogent.md
tests/: __init__.py  test_manifest.py  test_odoo_connection.py  test_tools.py
